# ChangeLog for net-fs/autofs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.96 2010/07/18 12:14:26 nixnut Exp $

  18 Jul 2010; <nixnut@gentoo.org> autofs-5.0.4-r5.ebuild:
  ppc stable #292147

  25 Jun 2010; Raúl Porcel <armin76@gentoo.org> autofs-5.0.4-r5.ebuild:
  alpha/arm/ia64/sparc stable wrt #292147

  20 Jun 2010; Markus Meier <maekke@gentoo.org> autofs-5.0.4-r5.ebuild:
  amd64/x86 stable, bug #292147

*autofs-5.0.5 (09 Jun 2010)

  09 Jun 2010; Peter Volkov <pva@gentoo.org> +autofs-5.0.5.ebuild,
  +files/autofs-5.0.5-fix-building-without-sasl.patch,
  +files/autofs-5.0.5-respect-user-flags-and-fix-asneeded.patch,
  metadata.xml:
  Version bump, bug #296357, thank Dustin Polke for this work.

  01 Jun 2010; Peter Volkov <pva@gentoo.org> autofs-5.0.4-r5.ebuild:
  Wrong patch was applied and that cause build issue, bug #292147#c15, thank
  Christian Ruppert (idl0r) for report and Dustin Polke for this fix.

  28 May 2010; Peter Volkov <pva@gentoo.org> autofs-5.0.4-r5.ebuild,
  metadata.xml:
  Added missed dependenices, disabled automagic hesiod, bug 292147, thank
  Dustin Polke for this job. Dustin stepped in as co-maintainer (/me proxy).

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> autofs-4.1.3-r7.ebuild,
  autofs-4.1.3-r9.ebuild, autofs-5.0.3-r6.ebuild, autofs-5.0.4.ebuild,
  autofs-5.0.4-r2.ebuild, autofs-5.0.4-r3.ebuild, autofs-5.0.4-r4.ebuild,
  autofs-5.0.4-r5.ebuild:
  Remove virtual/libc

*autofs-5.0.4-r5 (14 Jun 2009)

  14 Jun 2009; Stefaan De Roeck <stefaan@gentoo.org>
  +autofs-5.0.4-r5.ebuild:
  Revision bump - include latest upstream patches, probably fixes #269004

  11 Jun 2009; Stefaan De Roeck <stefaan@gentoo.org>
  -autofs-3.1.7-r3.ebuild, -autofs-3.1.7-r4.ebuild, -autofs-4.0.0.ebuild,
  -autofs-4.1.3.ebuild, -autofs-4.1.3-r1.ebuild, -autofs-4.1.3-r2.ebuild,
  -autofs-4.1.3-r3.ebuild, -autofs-4.1.3-r4.ebuild, -autofs-4.1.3-r8.ebuild,