@@ -146,14 +146,14 @@ DIST autofs-5.0.5-patches-1.tar.lzma 59744 RMD160 4f253dfb04e5f09d16b6101e512137
 DIST autofs-5.0.5.tar.bz2 301327 RMD160 4d105cce439544193b4abcb0ca4763f8c1d3cf54 SHA1 7f8a320cc126cb233be23749669735320fe6933c SHA256 68c73e01bc3c14c7d3613a861bbde4ab601c13f3127fcb837d49e435e5986002
 EBUILD autofs-3.1.7-r5.ebuild 1739 RMD160 2aba32bed55900477131d080beb301b1271be1aa SHA1 8a6b81324f6f893dac00324432b1bcfbb321856a SHA256 4e5c9f0981fb87311e452be843f6426a694c03a613f7eb05c7360c6e43f147ae
 EBUILD autofs-3.1.7-r6.ebuild 1774 RMD160 9054304132c27b09695f97457d257d0099b018a3 SHA1 394c17d7905c79dc37a6abc0cb9801854e82c067 SHA256 c3f954cba4d42f40b3a4d40dc81d3d74976c4bb5b16cf0be7da0c3e11e4cdccb
-EBUILD autofs-4.1.3-r7.ebuild 2989 RMD160 30122862e83e133f7ca817b4e708bb1c25308afb SHA1 2019f28e7b27d5ba1fee9174adad26217f88c952 SHA256 68c70c48c90956dd80442eee04f9339a97f21abfa92ea960e5fa115baf742983
+EBUILD autofs-4.1.3-r7.ebuild 2992 RMD160 7fc94cc967a7756eb9efb3da4a422fbb647c4d2c SHA1 056a5a4710b7275fb47a495985b51a64312412c4 SHA256 e8c538577a1a04659a0ff990b543efdb2dbb61d8b6bbb1cd2c7c1b159a842710
 EBUILD autofs-4.1.3-r9.ebuild 3101 RMD160 29c754ba5407258028cc372ee0d88193224f2ff9 SHA1 4fd3ec05fc46d05148c7ef32f97ee402bf2cb23f SHA256 a895a29abf8ee920cfa87764a30052f2d014d3003fc0421d430d0c2300e233bd
-EBUILD autofs-5.0.3-r6.ebuild 4263 RMD160 3738a7d4e17bb2b3e8c402f7f0ef902ce3393847 SHA1 0d4fcee144a2440beba778c1b8a33a1103239521 SHA256 3b02a6593ca7a3d3f9da690e3328f6565da8081cdffaa3ea744fcbb159f2f7c2
+EBUILD autofs-5.0.3-r6.ebuild 4266 RMD160 f1fedf489dceea7366f0d334d499fcc1db57d824 SHA1 b8dc48046353e6ea3e4bdd7c228d0ed565077634 SHA256 7db072e58681b59a7e04970134ea8c5d37ffc1388e7e64a27280a013886d335a
 EBUILD autofs-5.0.4-r2.ebuild 2690 RMD160 2e06b0d476013352a24d317003bec8a72c8a0543 SHA1 c79ec2594cc6b9d27b40573383bcca7395dc35bc SHA256 a9ca5432abef194969d40ea041c506c345b21203d283130b166a14dc577c3602
 EBUILD autofs-5.0.4-r3.ebuild 4193 RMD160 820198e5016743bc58993274a8eb6216391391d5 SHA1 456a9c922ce2294f1e6fac4157f7452340ca6d08 SHA256 e6dff9174bb10ca08d15f2deb101298e3fca09926f973ceb01e42850b3c5b944
 EBUILD autofs-5.0.4-r4.ebuild 4467 RMD160 fd8b8bf519bd585154c0216e387e2ffdef5c6e58 SHA1 de127e4e8946b9636ff0a51fab4c71a2fc940b92 SHA256 a3ebf1697a3bd3271f4c3186748d35b12389a94519418fdd310ae225c82e29b7
 EBUILD autofs-5.0.4-r5.ebuild 4860 RMD160 4c91ce5e07f33404f9009f967a632d49d1d0ed7f SHA1 383c175e9a0e6d8c059d92d5f03f8cf1a62acc95 SHA256 b02bf55cddfc64f83291d6fb10e7463dc3950039b0c8b000ef49a137b5b4aa3d
 EBUILD autofs-5.0.4.ebuild 2520 RMD160 101142f25740c5c9c07178615834abdb9c0d36db SHA1 d965e8186c3d6d4075afab86cfb5500ca5295a0c SHA256 ae46e201d50517bbbbe3cf45dd6555a09d3c18a94ff041a89b5bd5d75a749826
 EBUILD autofs-5.0.5.ebuild 2835 RMD160 5c5ca0c11ae8205f85bc8fbec7e2b95f206bbb91 SHA1 0d342ceed013e86f9c7f3a97706bde018843b301 SHA256 5107794cdebe88a072bb8ea82e42b0e17de242da17e032d515fb19a650dab8fe
-MISC ChangeLog 15231 RMD160 3c6409d19ac5b663ca65e441d2659523323024df SHA1 90ca9d837da4fc6c71aa5c829fb15966bbb49ae5 SHA256 a2d7be8c3ee99fbafc5815bd8026518f94f4f1fc3dd68f1761d56602931b8554
+MISC ChangeLog 15371 RMD160 481299b950da0045d91e99af1e4cef6a5dfaec92 SHA1 55d9c67b38d2f6a847f0434fd1f2c668c0981664 SHA256 99c5d5bc406e97552be9686b5a178e3ce44877ec3d29bb0b78bdc54fc2480819
 MISC metadata.xml 629 RMD160 e54d3bf18dc419c0e900d81ed9aca1432e555d65 SHA1 64893b5cd342d35c9278df1b63fa106629b5ccf4 SHA256 2f9dffb787ccf5f094c9f839c60f32cc78f12546b56da94fec2c1fbb23e07e2b
