@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/autofs-4.1.3-r7.ebuild,v 1.6 2009/09/23 18:35:30 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/autofs-4.1.3-r7.ebuild,v 1.7 2010/07/21 22:12:50 ssuominen Exp $
 
 inherit eutils multilib
 
@@ -19,7 +19,7 @@ SRC_URI="${SRC_URI_BASE}/${P}.tar.bz2
 DEPEND="ldap? ( >=net-nds/openldap-2.0 )"
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ~ppc64 sparc x86"
 
 src_unpack() {
 	unpack ${P}.tar.bz2
