@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/autofs-5.0.3-r6.ebuild,v 1.8 2009/09/23 18:35:30 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/autofs-5.0.3-r6.ebuild,v 1.9 2010/07/21 22:12:50 ssuominen Exp $
 
 inherit eutils multilib autotools
 
@@ -68,7 +68,7 @@ DEPEND="ldap? ( >=net-nds/openldap-2.0 )
 	# currently, sasl code assumes the presence of kerberosV
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ~ppc64 sparc x86"
 
 src_unpack() {
 	unpack ${P}.tar.bz2
