@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/autofs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.96 2010/07/18 12:14:26 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.97 2010/07/21 22:12:50 ssuominen Exp $
+
+  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
+  autofs-4.1.3-r7.ebuild, autofs-5.0.3-r6.ebuild:
+  Revert to ~ppc64 wrt #292147.
 
   18 Jul 2010; <nixnut@gentoo.org> autofs-5.0.4-r5.ebuild:
   ppc stable #292147
